clean up CMakeLists.txt a bit

--- a/src/libbitblit/CMakeLists.txt
+++ b/src/libbitblit/CMakeLists.txt
@@ -43,7 +43,8 @@ ENDIF()
 
 IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/sdl-backend)
-  FIND_PACKAGE(SDL2 REQUIRED)
+  FIND_PACKAGE(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
+  FIND_PACKAGE(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
   LIST(APPEND bitblit_SOURCES
        sdl-backend/bit_blit.c
        sdl-backend/bit_destroy.c
@@ -68,8 +69,7 @@ IF(NOT CMAKE_SYSTEM_NAME MATCHES "Emscripten")
 ENDIF()
 
 IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
-  TARGET_INCLUDE_DIRECTORIES(bitblit PRIVATE ${SDL2_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES(bitblit ${SDL2_LIBRARY})
+  TARGET_LINK_LIBRARIES(bitblit PRIVATE SDL2::SDL2)
 ENDIF()
 
 INSTALL(TARGETS bitblit DESTINATION lib)
