initial x11 graphics import
Co-authored-by: Howard Chu <hyc@symas.com>
Co-authored-by: erysdren <contact@erysdren.me>

--- a/src/libbitblit/CMakeLists.txt
+++ b/src/libbitblit/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT(bitblit C)
 
 SET(MGR_BITBLIT_BACKEND "stub-backend" CACHE STRING "libbitblit backend renderer")
-SET_PROPERTY(CACHE MGR_BITBLIT_BACKEND PROPERTY STRINGS stub-backend sdl-backend)
+SET_PROPERTY(CACHE MGR_BITBLIT_BACKEND PROPERTY STRINGS stub-backend sdl-backend x11-backend)
 MESSAGE(STATUS "bitblit-backend=${MGR_BITBLIT_BACKEND}")
 
 SET(bitblit_SOURCES
@@ -60,6 +60,22 @@ IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
        sdl-backend/screen.h)
 ENDIF()
 
+IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/x11-backend)
+  FIND_PACKAGE(X11 REQUIRED)
+  LIST(APPEND bitblit_SOURCES
+       x11-backend/blit.c
+       x11-backend/line.c
+       x11-backend/pixel.c
+       x11-backend/bitscreen.c
+       x11-backend/color.c
+       x11-backend/bitmisc.c
+       x11-backend/bit_destroy.c
+       x11-backend/bit_bytescr.c)
+  LIST(APPEND bitblit_HEADERS
+       x11-backend/screen.h)
+ENDIF()
+
 ADD_LIBRARY(bitblit
             STATIC
             ${bitblit_SOURCES}
@@ -70,6 +86,11 @@ ENDIF()
 
 IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
   TARGET_LINK_LIBRARIES(bitblit PRIVATE SDL2::SDL2)
+ENDIF()
+
+IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
+  TARGET_LINK_LIBRARIES(bitblit PRIVATE ${X11_LIBRARIES})
+  TARGET_INCLUDE_DIRECTORIES(bitblit PRIVATE ${X11_INCLUDE_DIRS})
 ENDIF()
 
 INSTALL(TARGETS bitblit DESTINATION lib)
