--- a/src/libbitblit/CMakeLists.txt
+++ b/src/libbitblit/CMakeLists.txt
@@ -91,6 +91,7 @@ ENDIF()
 IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
   TARGET_LINK_LIBRARIES(bitblit PRIVATE ${X11_LIBRARIES})
   TARGET_INCLUDE_DIRECTORIES(bitblit PRIVATE ${X11_INCLUDE_DIRS})
+  TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC USE_X11)
 ENDIF()
 
 INSTALL(TARGETS bitblit DESTINATION lib)
