x11: fix up CMakeLists.txt stuff

--- a/src/libbitblit/CMakeLists.txt
+++ b/src/libbitblit/CMakeLists.txt
@@ -92,6 +92,7 @@ IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
   TARGET_LINK_LIBRARIES(bitblit PRIVATE ${X11_LIBRARIES})
   TARGET_INCLUDE_DIRECTORIES(bitblit PRIVATE ${X11_INCLUDE_DIRS})
   TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC USE_X11)
+  TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC SCREEN_DEV=":0")
 ENDIF()
 
 INSTALL(TARGETS bitblit DESTINATION lib)
