--- a/src/mgr/CMakeLists.txt
+++ b/src/mgr/CMakeLists.txt
@@ -6,7 +6,7 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}) # For default_font.h, icon_serv
 ADD_DEFINITIONS(-DFONTDIR="${CMAKE_SOURCE_DIR}/font")
 ADD_DEFINITIONS(-DICONDIR="${CMAKE_SOURCE_DIR}/icon")
 ADD_DEFINITIONS(-DMOUSE_DEV="fix-me")
-ADD_DEFINITIONS(-DSCREEN_DEV="fix-me")
+# ADD_DEFINITIONS(-DSCREEN_DEV="fix-me")
 ADD_DEFINITIONS(-DTERMNAME="mgr")
 
 OPTION(MGR_ENABLE_BUCKEY "Keyboard operated 'mouse' commands." OFF)
