it works under x11 again~!

--- a/src/mgr/CMakeLists.txt
+++ b/src/mgr/CMakeLists.txt
@@ -7,7 +7,7 @@ ADD_DEFINITIONS(-DFONTDIR="${CMAKE_SOURCE_DIR}/font")
 ADD_DEFINITIONS(-DICONDIR="${CMAKE_SOURCE_DIR}/icon")
 ADD_DEFINITIONS(-DMOUSE_DEV="fix-me")
 # ADD_DEFINITIONS(-DSCREEN_DEV="fix-me")
-ADD_DEFINITIONS(-DTERMNAME="mgr")
+ADD_DEFINITIONS(-DTERMNAME="mgr-linux")
 
 OPTION(MGR_ENABLE_BUCKEY "Keyboard operated 'mouse' commands." OFF)
 IF(MGR_ENABLE_BUCKEY)
