--- a/src/libbitblit/CMakeLists.txt
+++ b/src/libbitblit/CMakeLists.txt
@@ -1,7 +1,7 @@
 PROJECT(bitblit C)
 
-SET(MGR_BITBLIT_BACKEND "stub-backend" CACHE STRING "libbitblit backend renderer")
-SET_PROPERTY(CACHE MGR_BITBLIT_BACKEND PROPERTY STRINGS stub-backend sdl-backend x11-backend)
+SET(MGR_BITBLIT_BACKEND "stub" CACHE STRING "libbitblit backend renderer")
+SET_PROPERTY(CACHE MGR_BITBLIT_BACKEND PROPERTY STRINGS stub sdl2 x11 linuxfb)
 MESSAGE(STATUS "bitblit-backend=${MGR_BITBLIT_BACKEND}")
 
 SET(bitblit_SOURCES
@@ -24,7 +24,7 @@ IF(MGR_ENABLE_MOVIE)
        movie/share.c)
 ENDIF()
 
-IF(MGR_BITBLIT_BACKEND MATCHES "stub-backend")
+IF(MGR_BITBLIT_BACKEND MATCHES "stub")
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/stub-backend)
   LIST(APPEND bitblit_SOURCES
        stub-backend/bit_blit.c
@@ -41,7 +41,7 @@ IF(MGR_BITBLIT_BACKEND MATCHES "stub-backend")
        stub-backend/screen.h)
 ENDIF()
 
-IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
+IF(MGR_BITBLIT_BACKEND MATCHES "sdl2")
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/sdl-backend)
   FIND_PACKAGE(SDL2 REQUIRED CONFIG REQUIRED COMPONENTS SDL2)
   FIND_PACKAGE(SDL2 REQUIRED CONFIG COMPONENTS SDL2main)
@@ -60,7 +60,7 @@ IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
        sdl-backend/screen.h)
 ENDIF()
 
-IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
+IF(MGR_BITBLIT_BACKEND MATCHES "x11")
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/x11-backend)
   FIND_PACKAGE(X11 REQUIRED)
   LIST(APPEND bitblit_SOURCES
@@ -76,6 +76,23 @@ IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
        x11-backend/screen.h)
 ENDIF()
 
+IF(MGR_BITBLIT_BACKEND MATCHES "linuxfb")
+  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/linuxfb-backend)
+  LIST(APPEND bitblit_SOURCES
+       linuxfb-backend/bit_blit.c
+       linuxfb-backend/bit_destroy.c
+       linuxfb-backend/bit_initscreen.c
+       linuxfb-backend/bit_line.c
+       linuxfb-backend/bit_on.c
+       linuxfb-backend/bit_point.c
+       linuxfb-backend/bit_size.c
+       linuxfb-backend/mem_rop.c
+       linuxfb-backend/palette.c
+       linuxfb-backend/screen.c)
+  LIST(APPEND bitblit_HEADERS
+       linuxfb-backend/screen.h)
+ENDIF()
+
 ADD_LIBRARY(bitblit
             STATIC
             ${bitblit_SOURCES}
@@ -84,15 +101,19 @@ IF(NOT CMAKE_SYSTEM_NAME MATCHES "Emscripten")
   SET_TARGET_PROPERTIES(bitblit PROPERTIES VERSION ${MGR_VERSION})
 ENDIF()
 
-IF(MGR_BITBLIT_BACKEND MATCHES "sdl-backend")
+IF(MGR_BITBLIT_BACKEND MATCHES "sdl2")
   TARGET_LINK_LIBRARIES(bitblit PRIVATE SDL2::SDL2)
 ENDIF()
 
-IF(MGR_BITBLIT_BACKEND MATCHES "x11-backend")
+IF(MGR_BITBLIT_BACKEND MATCHES "x11")
   TARGET_LINK_LIBRARIES(bitblit PRIVATE ${X11_LIBRARIES})
   TARGET_INCLUDE_DIRECTORIES(bitblit PRIVATE ${X11_INCLUDE_DIRS})
   TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC USE_X11)
   TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC SCREEN_DEV=":0")
+ENDIF()
+
+IF(MGR_BITBLIT_BACKEND MATCHES "linuxfb")
+  TARGET_COMPILE_DEFINITIONS(bitblit PUBLIC SCREEN_DEV="/dev/fb0")
 ENDIF()
 
 INSTALL(TARGETS bitblit DESTINATION lib)
