clients: restore mclock

--- a/src/clients/CMakeLists.txt
+++ b/src/clients/CMakeLists.txt
@@ -1,4 +1,4 @@
-# ADD_SUBDIRECTORY(portable)
+ADD_SUBDIRECTORY(portable)
 # ADD_SUBDIRECTORY(icon)
 # ADD_SUBDIRECTORY(misc)
 # ADD_SUBDIRECTORY(bitblit)
